LOGIN REGISTER SPLASH NOT FINAL

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,31 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LITERISEMOBILE"
         tools:targetApi="31">
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+            android:name="com.example.literisemobile.ui.activities.SplashActivity"
+            android:exported="true"
+            android:theme="@style/Theme.LITERISEMOBILE">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.example.literisemobile.ui.activities.LoginActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LITERISEMOBILE" />
+
+        <activity
+            android:name="com.example.literisemobile.ui.activities.RegisterActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LITERISEMOBILE" />
+
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
